--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,4 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
-mainClassName = "Main"
+mainClassName = "EntekhabVahed"
